# web_bench_ui

./: Cargo.toml  Makefile  README.md  index.html  style.css
.github/workflows/: Deployment.yml
src/: components.rs  entities.rs  lib.rs  main.rs  services.rs  utils.rs
src/components/: barchart.rs  table.rs  tabs.rs
