[package]
name = "web_bench_ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20", features = ["csr"] }
gloo-net = "0.2"
serde_json = "1.0.89"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
stylist = "0.12"
